Fixed FlipBox back side valign issue

--- a/less/cl-flipbox.less
+++ b/less/cl-flipbox.less
@@ -44,7 +44,10 @@
 		}
 		&-desc {
 			line-height: 1.7;
-			margin: 0 0 24px;
+			margin: 0 0 22px !important;
+		}
+		&-desc:last-child {
+			margin: 0 !important;
 		}
 		&-icon {
 			margin: 0 0 22px;
